--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "2.1.4",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "@ionic/cli-plugin-proxy": "1.4.6",
     "ionic": "3.9.2",
     "typescript": "2.3.4"
   },
