--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@ionic-native/camera": "^4.2.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/image-picker": "^4.2.1",
+        "@ionic-native/social-sharing": "^4.3.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
@@ -37,6 +38,8 @@
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-telerik-imagepicker": "^2.1.8",
         "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-plugin-x-socialsharing": "^5.2.0",
+        "es6-promise-plugin": "^4.1.0",
         "firebase": "^4.3.1",
         "ionic-angular": "3.6.1",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -63,7 +66,8 @@
             "cordova-plugin-device": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "cordova-plugin-x-socialsharing": {}
         },
         "platforms": [
             "android"
